# gaia-fdg

./: .gitignore  README.md  fdg_data.py  pyproject.toml
tests/: test_fdg_data.py
